--- a/app/src/main/res/layout/calculation.xml
+++ b/app/src/main/res/layout/calculation.xml
@@ -1,7 +1,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:background="@drawable/calc_bgd">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <include layout="@layout/toolbar_title" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/calc_bgd">
 
     <ListView
         android:id="@+id/calculation_list"
@@ -10,5 +18,7 @@
         android:divider="#bfbfbf"
         android:dividerHeight="8dp"
         android:padding="8dp" />
+
+</LinearLayout>
 
 </LinearLayout>
