--- a/app/src/main/res/layout/info.xml
+++ b/app/src/main/res/layout/info.xml
@@ -1,24 +1,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:orientation="vertical">
+
+    <include layout="@layout/toolbar_title" />
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="200sp" 
+        android:layout_height="160dp"
         android:background="@drawable/icon_bgd">
 
+        <!--
         <TextView
             android:id="@+id/info_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
+            -->
+        <TextSwitcher
+            android:id="@+id/info_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inAnimation="@anim/fade_in"
+            android:outAnimation="@anim/fade_out"
+            android:onClick="click"/>
     </ScrollView>
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/info_pic"/>
-    
+        android:background="@drawable/info_pic" />
+
 </LinearLayout>
