--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -5,6 +5,8 @@
     android:animateLayoutChanges="true"
     android:orientation="vertical">
 
+    <include layout="@layout/toolbar" />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_main"
         android:layout_width="match_parent"
