--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,23 +4,31 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
             backward-compatibility can go here.
-        -->
+-->
+        <item name="colorPrimary">@color/toolbar</item>
+        <item name="colorPrimaryDark">@color/toolbar</item>
     </style>
 
     <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
+    <style name="AppTheme" parent="@style/AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+       <!-- <item name="android:windowTranslucentStatus">true</item> -->
+    </style>
+
+    <style name="SplashTheme" parent="@android:style/Theme.Translucent.NoTitleBar.Fullscreen">
+        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <!-- <item name="android:windowTranslucentStatus">true</item> -->
     </style>
     
     <style name="MyTheme" parent="android:style/Theme.NoTitleBar.Fullscreen">
-        <item name="android:windowAnimationStyle">@style/Animation</item>
+      <item name="android:windowAnimationStyle">@style/Animation</item>
     </style>
-    
+
     <style name="Animation">
         <item name="android:activityOpenEnterAnimation">@null</item>
         <item name="android:activityOpenExitAnimation">@null</item>
@@ -34,6 +42,11 @@
         <item name="android:taskToFrontExitAnimation">@null</item>
         <item name="android:taskToBackEnterAnimation">@null</item>
         <item name="android:taskToBackExitAnimation">@null</item>
+    </style>
+
+    <style name="ToolBarStype">
+        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="android:layout_height">60dp</item>
     </style>
 
 </resources>
