--- a/app/src/main/res/layout/lesson.xml
+++ b/app/src/main/res/layout/lesson.xml
@@ -3,21 +3,26 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <include layout="@layout/toolbar_title" />
+    <com.chenglong.muscle.toolbar.MyToolBar
+        xmlns:mytoolbar="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/toolbar_height"
+        android:fitsSystemWindows="true"
+        android:background="?attr/colorPrimary"
+        mytoolbar:rightTextTitle="训练课程"/>
+    <!--<include layout="@layout/mytoolbar" />-->
 
 <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#99ccff" >
+    android:layout_height="match_parent">
+    <!--android:background="#99ccff" >-->
 
     <LinearLayout
         android:id="@+id/lession_ll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:orientation="vertical" >
-
-
 
         <TextView
             android:layout_width="match_parent"
