--- a/app/src/main/res/drawable-mdpi/rectangle_toolbar_left.xml
+++ b/app/src/main/res/drawable-mdpi/rectangle_toolbar_left.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+    android:shape="rectangle">
 
-    <corners android:topLeftRadius="50dp"
-        android:bottomLeftRadius="50dp"/>
+    <corners
+        android:bottomLeftRadius="65dp"
+        android:topLeftRadius="65dp" />
+
+    <padding
+        android:left="4dp"
+        android:right="6dp" />
 
     <size
-        android:height="30dp"
-        android:width="60dp" />
+        android:width="60dp"
+        android:height="30dp" />
 
     <solid android:color="#FFFFFF" />
 
     <stroke
-        android:width="3dp"
-        android:color="#6699FF" />
-    
+        android:width="2dp"
+        android:color="#FFFFFF" />
+
 </shape>
