--- a/app/src/main/res/drawable/rectangle_body.xml
+++ b/app/src/main/res/drawable/rectangle_body.xml
@@ -12,12 +12,12 @@
 
     <stroke
         android:width="2dp"
-        android:color="#6699FF" />
+        android:color="#000" />
 
     <gradient 
-        android:startColor="#f00"
+        android:startColor="#FA8072"
         android:centerColor="#fff"
-        android:endColor="#00f"
+        android:endColor="@color/colorPrimary"
         android:angle="45"/>
     
 </shape>
