--- a/app/src/main/res/layout/info.xml
+++ b/app/src/main/res/layout/info.xml
@@ -3,11 +3,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/toolbar_title" />
+    <com.chenglong.muscle.toolbar.MyToolBar
+        xmlns:mytoolbar="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/toolbar_height"
+        android:fitsSystemWindows="true"
+        android:background="?attr/colorPrimary"
+        mytoolbar:rightTextTitle="健身贴士" />
+    <!--<include layout="@layout/toolbar_title" />-->
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="180dp"
         android:background="@drawable/icon_bgd">
 
         <!--
@@ -24,7 +31,7 @@
             android:layout_height="wrap_content"
             android:inAnimation="@anim/fade_in"
             android:outAnimation="@anim/fade_out"
-            android:onClick="click"/>
+            android:onClick="onTextClick"/>
     </ScrollView>
 
     <ImageView
