--- a/app/src/main/res/layout/muscle_list.xml
+++ b/app/src/main/res/layout/muscle_list.xml
@@ -3,7 +3,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <include layout="@layout/toolbar_title" />
+    <com.chenglong.muscle.toolbar.MyToolBar
+        xmlns:mytoolbar="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/toolbar_height"
+        android:fitsSystemWindows="true"
+        android:background="?attr/colorPrimary"
+        mytoolbar:rightTextTitle="肌肉锻炼" />
+    <!--<include layout="@layout/toolbar_title" />-->
 
     <ScrollView
         android:layout_width="match_parent"
