--- a/app/src/main/res/layout/puzzle_game.xml
+++ b/app/src/main/res/layout/puzzle_game.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <include layout="@layout/toolbar_title"
+    <include layout="@layout/mytoolbar"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
