--- a/app/src/main/res/layout/puzzle_setting.xml
+++ b/app/src/main/res/layout/puzzle_setting.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/toolbar_title"/>
+    <include layout="@layout/mytoolbar"/>
 
     <LinearLayout
         android:id="@+id/setting_ll"
