--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -12,8 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="?attr/colorPrimary"
-        toolbar:logo="@drawable/icon_small"
+        toolbar:logo="@drawable/icon_micro"
+        toolbar:navigationIcon="@drawable/toolbar_goback"
+        toolbar:title="美队健身"
         toolbar:subtitle="美队健身"
-        toolbar:title="美队健身">
-    </android.support.v7.widget.Toolbar>
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 </LinearLayout>
