--- a/app/src/main/res/layout/puzzle_setting.xml
+++ b/app/src/main/res/layout/puzzle_setting.xml
@@ -3,7 +3,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/mytoolbar"/>
+    <com.chenglong.muscle.custom.MyToolBar
+        xmlns:mytoolbar="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/toolbar_height"
+        android:fitsSystemWindows="true"
+        android:background="?attr/colorPrimary"
+        mytoolbar:rightTextTitle="游戏设置"/>
+    <!--<include layout="@layout/mytoolbar"/>-->
 
     <LinearLayout
         android:id="@+id/setting_ll"
