--- a/app/src/main/res/layout/activity_tool_lesson.xml
+++ b/app/src/main/res/layout/activity_tool_lesson.xml
@@ -62,7 +62,8 @@
         <ImageView
             android:id="@+id/lession_training"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="180dp"
+            android:scaleType="fitXY"/>
 
         <TextView
             android:id="@+id/lession_desc"
