--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -25,9 +25,9 @@
         <item>高蛋饮品和5克支链氨基酸(BCAA)</item>
         <item>苹果加杏仁 </item>
         <item>高蛋饮品和5克支链氨基酸(BCAA)</item>
-        <item>鸡肉沙拉、棕色印度香米 </item>
+        <item>鸡肉沙拉、棕色印度香米</item>
         <item>高蛋白饮品</item>
-        <item>瘦肉蛋白，如鱼、鸡肉或牛肉，加蔬菜，无淀粉的碳水化合物 </item>
+        <item>瘦肉蛋白，蔬菜，无淀粉的碳水</item>
         <item>谷氨酰胺和欧米伽3鱼油</item>
     </string-array>
     <string-array name="muscle">
