--- a/app/src/main/res/layout/item_diet.xml
+++ b/app/src/main/res/layout/item_diet.xml
@@ -1,35 +1,30 @@
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"  
-    xmlns:tools="http://schemas.android.com/tools"  
-    android:layout_width="match_parent"  
-    android:layout_height="match_parent"  
-    android:shrinkColumns="1,2">  
-      
- <TableRow
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"  >  
-       
-        <ImageView  
-            android:id="@+id/diet_listitem_iv"
-            android:background="#ff6666"  
-            android:layout_width="wrap_content"  
-            android:layout_height="match_parent"/>  
-        
-        <TextView  
-            android:id="@+id/diet_listitem_tv"
-            android:layout_width="0dp"  
-            android:layout_height="match_parent" 
-            android:gravity="center" 
-            android:layout_weight="1"  
-            android:textStyle="bold"
-            android:background="#ffffff"/>
-          
-        <TextView  
-            android:id="@+id/diet_listitem_tv2" 
-            android:gravity="center"  
-            android:layout_width="0dp"  
-            android:layout_height="match_parent"
-            android:layout_weight="3" 
-            android:textStyle="bold"
-            android:background="#99ccff"/>  
-    </TableRow>    
-</TableLayout>  
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="40dp"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/diet_listitem_iv"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="#ff6666" />
+
+    <TextView
+        android:id="@+id/diet_listitem_tv"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_weight="1"
+        android:background="#ffffff"
+        android:gravity="center"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/diet_listitem_tv2"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_weight="3"
+        android:background="#99ccff"
+        android:gravity="center"
+        android:textStyle="bold" />
+</LinearLayout>
