--- a/app/src/main/res/layout/item_execrise.xml
+++ b/app/src/main/res/layout/item_execrise.xml
@@ -6,14 +6,16 @@
     
     <ImageView
         android:id="@+id/muscle_listitem_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:scaleType="fitXY"/>
     
     <TextView 
         android:id="@+id/muscle_listitem_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textSize="20dp"
         android:layout_gravity="center"/>
 
 </LinearLayout>
