--- a/app/src/main/res/layout/activity_tool_diet.xml
+++ b/app/src/main/res/layout/activity_tool_diet.xml
@@ -25,7 +25,7 @@
     <ListView
         android:id="@+id/diet_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="200dp"/>
 
     <ImageView
         android:layout_width="match_parent"
